feat: add health endpoint
